Menu de categorias quase finalizado e tela de cadastro de usuários em andamento

--- a/AppDecoracao/AppDecoracao/AppDecoracao.csproj
+++ b/AppDecoracao/AppDecoracao/AppDecoracao.csproj
@@ -14,6 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="CadastroUsuarios.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="MenuC.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
