--- a/AppDecoracao/AppDecoracao.Android/AppDecoracao.Android.csproj
+++ b/AppDecoracao/AppDecoracao.Android/AppDecoracao.Android.csproj
@@ -120,5 +120,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Divisoria.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Plano.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
