--- a/AppDecoracao/AppDecoracao.Android/AppDecoracao.Android.csproj
+++ b/AppDecoracao/AppDecoracao.Android/AppDecoracao.Android.csproj
@@ -121,7 +121,13 @@
     <AndroidResource Include="Resources\drawable\Divisoria.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\Plano.png" />
+    <AndroidResource Include="Resources\drawable\E.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\C.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\PlanoF.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
