Atualizão Tela sobre e Tela orçamento ainda não finalizadas

--- a/AppDecoracao/AppDecoracao/AppDecoracao.csproj
+++ b/AppDecoracao/AppDecoracao/AppDecoracao.csproj
@@ -23,5 +23,11 @@
     <EmbeddedResource Update="TeladeLogin.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="TeladeOrcamento.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="TelaSobre.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
